--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ This package takes inspiration from the Pharmaverse, specifically the
 
 You can install the development version of IDDOverse from [GitHub](https://github.com/) with:
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, comment=FALSE}
 # install.packages("devtools") #if you have not previously installed 'devtools' on your machine
 devtools::install_github("RhysPeploe/iddoverse")
 ```
