Added library(iddoverse) and made minor change to paragraph referring to when version 1.0 will be released

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,6 +36,7 @@ You can install the development version of IDDOverse from [GitHub](https://githu
 ```{r, message=FALSE, warning=FALSE, comment=FALSE}
 # install.packages("devtools") #if you have not previously installed 'devtools' on your machine
 devtools::install_github("RhysPeploe/iddoverse")
+library(iddoverse)
 ```
 
 Alternatively, to load the most recent update:
@@ -44,7 +45,7 @@ pkg = c('RhysPeploe/iddoverse')
 pacman::p_load_current_gh(char = pkg)
 ```
 
-We recommend updating the install regularly as the package is developing constantly. Version 1.0 will be released in the next few months. Until then, versions starting with '0.' should be expected to change without notification. 
+We recommend updating the install regularly as the package is developing constantly. Version 1.0 will be released in 2024. Until then, versions starting with '0.' should be expected to change without notification. 
 
 ## Why is this useful?
 
