--- a/vignettes/iddoverse_vignette.Rmd
+++ b/vignettes/iddoverse_vignette.Rmd
@@ -11,8 +11,8 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  error = TRUE#,
-  #eval = can_decrypt
+  error = TRUE # ,
+  # eval = can_decrypt
 )
 ```
 
@@ -34,7 +34,7 @@ insights and merges several domains together. Documentation for each function ca
 If you have not downloaded the \{iddoverse\} package before, or need to update the function, which is advised regularly, run the following code in the R console:
 
 ```{r, warning=FALSE, message=FALSE}
-# install.packages("devtools") # Only run this line if devtools is not installed 
+# install.packages("devtools") # Only run this line if devtools is not installed
 devtools::install_github("RhysPeploe/iddoverse")
 ```
 
@@ -79,26 +79,29 @@ These commands provide new features or convert existing ones, in the below code,
 ```{r, fig.align='left'}
 derive_df_raw <- data.frame(
   USUBJID = c("001", "002", "003", "004"),
-  RFSTDTC = c(as.Date("2023/01/01"), as.Date("2023/04/01"), 
-              as.Date("2023/08/01"), as.Date("2023/12/01")),
+  RFSTDTC = c(
+    as.Date("2023/01/01"), as.Date("2023/04/01"),
+    as.Date("2023/08/01"), as.Date("2023/12/01")
+  ),
   AGE = c(35, 24, 4, 54),
   AGEU = c("YEARS", "MONTHS", "YEARS", "YEARS"),
   SEX = c(1, 2, 2, 1),
   HEIGHT = c(180, 97, 109, 155),
   WEIGHT = c(80, 10, 18, 67)
-  
 )
 
 kable(derive_df_raw)
-derive_df = derive_df_raw %>% 
-  DERIVE_SEASON() %>% 
-  DERIVE_AGE_DAYS() %>% 
-  DERIVE_AGE_YEARS() %>% 
-  DERIVE_BMI() 
+derive_df <- derive_df_raw %>%
+  DERIVE_SEASON() %>%
+  DERIVE_AGE_DAYS() %>%
+  DERIVE_AGE_YEARS() %>%
+  DERIVE_BMI()
 
-join_df = left_join(derive_df, 
-                    derive_df %>% DERIVE_ANTHRO())
-kable(join_df) 
+join_df <- left_join(
+  derive_df,
+  derive_df %>% DERIVE_ANTHRO()
+)
+kable(join_df)
 ```
 
 ## PREP\_ Functions
@@ -107,24 +110,32 @@ Most domains require transformation from long format where there is one row per 
 
 ```{r}
 lb_df <- data.frame(
-  STUDYID = c("RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB", 
-              "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB"),
+  STUDYID = c(
+    "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB",
+    "RPTESTB", "RPTESTB", "RPTESTB", "RPTESTB"
+  ),
   DOMAIN = "LB",
-  USUBJID = c("RPTESTB_001", "RPTESTB_001", "RPTESTB_001", "RPTESTB_002", "RPTESTB_002", 
-              "RPTESTB_002", "RPTESTB_002", "RPTESTB_003", "RPTESTB_003", "RPTESTB_003"),
+  USUBJID = c(
+    "RPTESTB_001", "RPTESTB_001", "RPTESTB_001", "RPTESTB_002", "RPTESTB_002",
+    "RPTESTB_002", "RPTESTB_002", "RPTESTB_003", "RPTESTB_003", "RPTESTB_003"
+  ),
   LBTESTCD = c("HGB", "PLAT", "HGB", "HGB", "PLAT", "HGB", "HCG", "HGB", "PLAT", "HGB"),
-  LBTEST = c("Hemoglobin", "Platelets", "Hemoglobin", "Hemoglobin", "Platelets", 
-             "Hemoglobin", "Choriogonadotropin Beta", "Hemoglobin", "Platelets", "Hemoglobin"),
-  LBORRES = c("95", "181000", "88", "101", "100000", "99", "NEG", "98", "90000", "102"), 
-  LBMODIFY = NA, 
-  LBORRESU = c("g/L", "10^6/L", "g/L", "g/L", "10^6/L", "g/L", NA, "g/L", "10^6/L", "g/L"), 
-  LBSTRESC = c(NA, NA, NA, NA, NA, NA, "NEGATIVE", NA, NA, NA), 
-  LBSTRESN = c(95, 181, 88, 101, 100, 99, NA, 98, 90, 102), 
-  LBSTRESU = c("g/L", "10^9/L", "g/L", "g/L", "10^9/L", "g/L", NA, "g/L", "10^9/L", "g/L"), 
-  VISITNUM = c(1, 2, 3, 1, 2, 3, 1, 1, 2, 3), 
-  VISITDY = c(1, 3, 42, 1, 3, 42, 1, 1, 3, NA), 
-  EPOCH = c("BASELINE", "TREATMENT", "FOLLOW UP", "BASELINE", "TREATMENT", "FOLLOW UP", 
-            "BASELINE", "BASELINE", "TREATMENT", "FOLLOW UP"), 
+  LBTEST = c(
+    "Hemoglobin", "Platelets", "Hemoglobin", "Hemoglobin", "Platelets",
+    "Hemoglobin", "Choriogonadotropin Beta", "Hemoglobin", "Platelets", "Hemoglobin"
+  ),
+  LBORRES = c("95", "181000", "88", "101", "100000", "99", "NEG", "98", "90000", "102"),
+  LBMODIFY = NA,
+  LBORRESU = c("g/L", "10^6/L", "g/L", "g/L", "10^6/L", "g/L", NA, "g/L", "10^6/L", "g/L"),
+  LBSTRESC = c(NA, NA, NA, NA, NA, NA, "NEGATIVE", NA, NA, NA),
+  LBSTRESN = c(95, 181, 88, 101, 100, 99, NA, 98, 90, 102),
+  LBSTRESU = c("g/L", "10^9/L", "g/L", "g/L", "10^9/L", "g/L", NA, "g/L", "10^9/L", "g/L"),
+  VISITNUM = c(1, 2, 3, 1, 2, 3, 1, 1, 2, 3),
+  VISITDY = c(1, 3, 42, 1, 3, 42, 1, 1, 3, NA),
+  EPOCH = c(
+    "BASELINE", "TREATMENT", "FOLLOW UP", "BASELINE", "TREATMENT", "FOLLOW UP",
+    "BASELINE", "BASELINE", "TREATMENT", "FOLLOW UP"
+  ),
   LBDY = c(1, 3, 42, 1, 4, 40, 1, 2, 5, NA)
 )
 
@@ -139,65 +150,69 @@ kable(PREP_LB_FU(lb_df))
 Up until this stage, the domains have been transformed individually and remain separate. Within, ANALYSE\_ functions, they are merged in turn in order to produce the custom analysis dataset. These functions call the other DERIVE and PREP actions so users can solely interact with the ANAYLSE\_ functions, or use the constituent parts to make their own version. However, knowledge of the process and how the data is processed is advisable for understanding and due diligence; inspecting the resultant data is pivotal to catch potential errors. Any output composed using the code will depend on the quality of the data.
 
 ```{r}
-#one,two more domains (dm-derive, in-clean/prep, lb - prep)
+# one,two more domains (dm-derive, in-clean/prep, lb - prep)
 dm_df <- data.frame(
-  STUDYID = c("RPTESTB", "RPTESTB", "RPTESTB"), 
-  DOMAIN = c("DM", "DM", "DM"), 
-  USUBJID = c("RPTESTB_001", "RPTESTB_002", "RPTESTB_003"), 
-  SUBJID = c("001", "002", "003"), 
-  RFSTDTC = c("2023/01", "2023/01", "2023/02"), 
-  DTHDTC = c("2023/08", NA, NA), 
-  DTHFL = c("Y", NA, NA), 
-  SITEID = c("OXFORD", "OXFORD", "OXFORD"), 
-  AGE = c(67, 18, 48), 
-  AGEU = c("YEARS", "YEARS", "MONTHS"), 
-  SEX = c("F", "F", "M"), 
-  RACE = c("White", "White", "White"), 
-  ETHNIC = c("British", "Irish", "British"), 
-  ARMCD = c("PBO", "TRT", "TRT"), 
-  ARM = c("PLACEBO", "TREATMENT", "TREATMENT"), 
-  COUNTRY = c("UK", "UK", "UK"), 
-  DMDTC = c("2023/01", "2023/01", "2023/02"), 
-  DMDY = c(1, 1, 1))
+  STUDYID = c("RPTESTB", "RPTESTB", "RPTESTB"),
+  DOMAIN = c("DM", "DM", "DM"),
+  USUBJID = c("RPTESTB_001", "RPTESTB_002", "RPTESTB_003"),
+  SUBJID = c("001", "002", "003"),
+  RFSTDTC = c("2023/01", "2023/01", "2023/02"),
+  DTHDTC = c("2023/08", NA, NA),
+  DTHFL = c("Y", NA, NA),
+  SITEID = c("OXFORD", "OXFORD", "OXFORD"),
+  AGE = c(67, 18, 48),
+  AGEU = c("YEARS", "YEARS", "MONTHS"),
+  SEX = c("F", "F", "M"),
+  RACE = c("White", "White", "White"),
+  ETHNIC = c("British", "Irish", "British"),
+  ARMCD = c("PBO", "TRT", "TRT"),
+  ARM = c("PLACEBO", "TREATMENT", "TREATMENT"),
+  COUNTRY = c("UK", "UK", "UK"),
+  DMDTC = c("2023/01", "2023/01", "2023/02"),
+  DMDY = c(1, 1, 1)
+)
 
 kable(dm_df)
 sa_df <- data.frame(
-  STUDYID = c("RPTESTB", "RPTESTB", "RPTESTB"), 
-  DOMAIN = c("SA", "SA", "SA"), 
-  SASEQ = c(1, 1, 1), 
-  USUBJID = c("RPTESTB_001", "RPTESTB_002", "RPTESTB_001"), 
-  SATERM = c("Fever", "P/F-MALARIA", "P/F-MALARIA"), 
-  SAMODIFY = c(NA, NA, NA), 
-  SADECOD = c("FEVER", NA, NA), 
-  SACAT = c("MEDICAL HISTORY", NA, NA), 
-  SAPRESP = c(NA, NA, NA), 
-  SAOCCUR = c(NA, NA, NA), 
-  SASEV = c("SEVERE", "SEVERE", NA), 
-  VISITNUM = c(1, 2, 3), 
-  VISIT = c("Day 0", "Day 2", "Week 6"), 
-  VISITDY = c(1, 3, 42), 
-  EPOCH = c("BASELINE", "TREATMENT", "FOLLOW UP"), 
-  SADTC = c("2023/01", "2023/01", "2023/02"), 
-  SADY = c(NA, 4, NA), 
-  SASTDY = c(-18, NA, 39), 
-  SAENDY = c(-4, NA, 42), 
-  SADUR = c(NA, NA, NA), 
-  SAEVINTX = c(NA, NA, NA))
+  STUDYID = c("RPTESTB", "RPTESTB", "RPTESTB"),
+  DOMAIN = c("SA", "SA", "SA"),
+  SASEQ = c(1, 1, 1),
+  USUBJID = c("RPTESTB_001", "RPTESTB_002", "RPTESTB_001"),
+  SATERM = c("Fever", "P/F-MALARIA", "P/F-MALARIA"),
+  SAMODIFY = c(NA, NA, NA),
+  SADECOD = c("FEVER", NA, NA),
+  SACAT = c("MEDICAL HISTORY", NA, NA),
+  SAPRESP = c(NA, NA, NA),
+  SAOCCUR = c(NA, NA, NA),
+  SASEV = c("SEVERE", "SEVERE", NA),
+  VISITNUM = c(1, 2, 3),
+  VISIT = c("Day 0", "Day 2", "Week 6"),
+  VISITDY = c(1, 3, 42),
+  EPOCH = c("BASELINE", "TREATMENT", "FOLLOW UP"),
+  SADTC = c("2023/01", "2023/01", "2023/02"),
+  SADY = c(NA, 4, NA),
+  SASTDY = c(-18, NA, 39),
+  SAENDY = c(-4, NA, 42),
+  SADUR = c(NA, NA, NA),
+  SAEVINTX = c(NA, NA, NA)
+)
 
 kable(sa_df)
 
 baseline_df <- ANALYSE_BASELINE(" ",
-                                DATA_DM = dm_df,
-                                DATA_LB = lb_df,
-                                DATA_MB = NULL,
-                                DATA_SA = sa_df)
+  DATA_DM = dm_df,
+  DATA_LB = lb_df,
+  DATA_MB = NULL,
+  DATA_SA = sa_df
+)
 
 kable(baseline_df)
 follow_up_df <- ANALYSE_FOLLOW_UP("VL",
-                                  DATA_DM = dm_df,
-                                  DATA_LB = lb_df,
-                                  DATA_MB = NULL,
-                                  DATA_SA = sa_df)
+  DATA_DM = dm_df,
+  DATA_LB = lb_df,
+  DATA_MB = NULL,
+  DATA_SA = sa_df
+)
 ```
 
 
@@ -213,12 +228,14 @@ join_df_raw <- data.frame(
 
 join_df_raw
 
-join_df <- cbind(join_df_raw, 
-                 join_df_raw %>% JOIN_PREGNANT())
+join_df <- cbind(
+  join_df_raw,
+  join_df_raw %>% JOIN_PREGNANT()
+)
 
 join_df
 
-#analyse (rp-join)
+# analyse (rp-join)
 ```
 
 
@@ -229,7 +246,7 @@ join_df
 To easily assess the variables in a domain, the DOMAIN_TABLE() function uses table() to display the frequency of terms, tests and treatments so that the user can specify additional variables in the PREP\_ and ANALYSE\_ steps. Demographic (DM) variables are the various column names, most domains this will be the TESTCD, such as in the Laboratory Test Results (LB). 
 
 ```{r}
-DOMAIN_TABLE("dm", dm_df) 
+DOMAIN_TABLE("dm", dm_df)
 
 DOMAIN_TABLE("lb", lb_df)
 ```
@@ -243,8 +260,8 @@ Here is a list of the functions in the \{iddoverse\} package with a description 
 library(reactable)
 
 functs <- tibble::tribble(
-  ~Functions,           ~Description, ~`Required Domains`,     
-  "DERIVE_BMI()",      "Computes the Body Mass Index for subjects aged 18 and over",   "DM, VS"
+  ~Functions, ~Description, ~`Required Domains`,
+  "DERIVE_BMI()", "Computes the Body Mass Index for subjects aged 18 and over", "DM, VS"
 ) %>% dplyr::select(Functions, Description, `Required Domains`)
 
 reactable(
