Added information on detaching package and reinstalling

--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,16 @@ devtools::install_github("RhysPeploe/iddoverse")
 library(iddoverse)
 ```
 
-We recommend updating the install regularly as the package is developing constantly. Version 1.0 will be released in 2024. Until then, versions starting with '0.' should be expected to change without notification. 
+We recommend updating the install regularly as the package is developing constantly. Version 1.0 will be released in 2024, development timeline is currently being created. Until then, versions starting with '0.' should be expected to change without notification. 
+
+It is best to remove the package and reinstall the current version:
+```{r}
+detach("package:iddoverse", unload = TRUE)
+
+devtools::install_github("RhysPeploe/iddoverse")
+library(iddoverse)
+```
+
 
 ## Why is this useful?
 
