--- a/vignettes/worlddatr.Rmd
+++ b/vignettes/worlddatr.Rmd
@@ -32,7 +32,7 @@ Typically, each researcher wanting to plot the globe would need to go through th
 
 You can install the `worlddatr` package from [GitHub](https://github.com/Infectious-Diseases-Data-Observatory/worlddatr), there you can find the code required.
 
-```{r setup}
+```{r setup, echo=FALSE, warning=FALSE}
 library(worlddatr)
 ```
 
